Join Us page fixes
Join us page changes
1) To display job listings in 3 rows
2) Overflow all excess listings
3) Adding a horizontal scroller
4) Buttons to scroll left and right horizontally

--- a/_sass/_blocks.scss
+++ b/_sass/_blocks.scss
@@ -1831,54 +1831,144 @@
     max-width: 100%;
 
     @include mq($from: desktop) {
-      max-width: 48%;
+      width: 100%;
       margin-right: 2%;
+      margin-bottom: 20px;
     }
   }
 
-  .job {
+  .arrows__container {
     width: 100%;
+    margin-bottom: -500px;
+    margin-top: 250px;
+  }
+
+  .svg__arrow_1 {
+    max-width: 40px;
+    height:auto;
+    padding-top: 250px;
+    margin-left: 70px;
+    transform: rotate(90deg);
+    float: left;
+
+    &:hover {
+      transform: scale(1.02);
+      transform: rotate(90deg);
+      cursor: pointer;
+    }
+  }
+
+  .svg__arrow_2 {
+    float: right;
+    max-width: 40px;
+    height:auto;
+    padding-top: 250px;
+    margin-right: 80px;
+    transform: rotate(270deg);
+
+    &:hover {
+      transform: scale(1.02);
+      transform: rotate(270deg);
+      cursor: pointer;
+    }
+  }
+
+  .job__slider_container {
+    width: 100%;
+    height: 820px;
+   -webkit-overflow-scrolling: touch;
+  }
+
+  .job__slider {
+    height: 100%;
+    width: 100%;
+    display:flex;
+    flex-direction:column;
+    grid-template-columns: auto auto auto auto;
+    flex-wrap:wrap;
+    grid-template-rows: 250px 250px 250px;
+    //white-space:nowrap;
+    align-content: flex-start;
+    grid-gap: 10px;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+
+  .job__link {
+    text-decoration: none;
+    color: inherit;
+  }
+
+  .job {
+    width: 90%;
     background-color: #fff;
     margin-bottom: 20px;
     padding: 10px;
-    box-sizing: border-box;
-    transition: transform ease-in-out 0.2s;
+    display: inline-block;
+    height: 220px;
+    white-space: normal;
+    overflow:hidden;
 
     @include mq($from: desktop) {
-      width: 24%;
+      width: 30%;
       margin-right: 1%;
+    }
+
+    h3 {
+      font-size: map-get($font-scale, 1);
+      text-align: center;
+      line-height: 1;
+      margin: 0;
+
+      @include mq($from: desktop) {
+        font-size: map-get($font-scale, 0.7);
+      }
+
+      @include mq($from: wide) {
+        font-size: map-get($font-scale, 1);
+      }
+
+      &.location {
+        opacity: 0.5;
+        margin-bottom: spacing(0.5);
+        margin-top: spacing(2);
+        font-size: map-get($font-scale, 0);
+      }
+      &.jobs__title {
+        margin-bottom: spacing(1.5);
+      }
+    }
+
+    .jobs__description {
+      font-size: 12px;
+      text-align: center;
+      overflow: hidden;
+      text-overflow: ellipsis;
+      display: -webkit-box;
+      -webkit-line-clamp: 6;
+      -webkit-box-orient: vertical;
+
+      @include mq($from: desktop) {
+        font-size: 15px;
+      }
+
+      @include mq($from: wide) {
+        font-size: 16px;
+      }
     }
 
     &:hover {
       transform: scale(1.02);
     }
 
-    h3 {
-      font-size: map-get($font-scale, 2);
-      line-height: 1;
-      margin: 0;
-
-      @include mq($from: desktop) {
-        font-size: map-get($font-scale, 1);
-      }
-
-      @include mq($from: wide) {
-        font-size: map-get($font-scale, 2);
-      }
-
-      &.location {
-        opacity: 0.5;
-        margin-bottom: spacing(2);
-        margin-top: spacing(2);
-        font-size: map-get($font-scale, 0);
-      }
-    }
   }
 
   h1 {
     font-size: map-get($font-scale, 5);
   }
 }
+
+
 
 @keyframes height {
   0% {
